# finpro_karierai

./: .dockerignore  .gitignore  Dockerfile  README.md  deployment_gcp.md  pyproject.toml
scratch/: test_db.py
script/: init_sqlite.py  run_ingestion.py
src/karierai/: agent.py  config.py  database.py  ingestion.py  models.py  prompts.py  server.py  services.py  simulation.py  telemetry.py  tools.py
tests/: test_chat.py  test_features.py  test_health.py
